--- a/index.html
+++ b/index.html
@@ -6,17 +6,8 @@
   <title>Fabian Bolte</title>
 
   <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet">
-  <style>
-    * {
-      /* box-sizing: border-box; */
-    }
 
-    html,
-    body {
-      /* overflow: hidden !important; */
-      /* height: 100vh; */
-    }
-  </style>
+  <script src="/libs/vue-bibtex/src/bibtex_js.js" type="text/javascript" charset="utf-8"></script>
 </head>
 
 <body>
